Properly configure the mug-errorprone pom file. Commented out a flaky test assertion